fix: скрипты Bybit читают credentials из ~/.openclaw/credentials.json
- Перенесли чтение API ключей из openclaw.json → credentials.json
- OpenClaw не поддерживает кастомные секции (bybit/mt5) в своём конфиге
- credentials.json — отдельный файл, не конфликтует с рантаймом
- Обновлён .gitignore: добавлен **/.openclaw/ (runtime state)

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ openclaw.json
 *.pyc
 .DS_Store
 keys.md
+
+# OpenClaw runtime state (создаётся автоматически в каждом workspace)
+**/.openclaw/
+
+# OpenClaw auto-generated templates (можно добавить, если полезны)
+# USER.md
+# HEARTBEAT.md
