feat: migrate crypto-trader from Python REST to Node SDK (bybit-api)
- Add bybit_trade.js: full trading module with Demo Trading support
  (order, close, partial_close, modify, close_all, positions, balance, leverage)
- Remove bybit_trade.py: incompatible with Demo Trading keys
- Remove bybit_monitor.py: replaced by bybit_trade.js --action=positions/balance
- Keep bybit_get_data.py: public API, no auth needed
- Update crypto-trader TOOLS.md, AGENTS.md, SOUL.md docs
- Add node_modules/ to .gitignore
- Add package.json with bybit-api dependency

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ openclaw.json
 .DS_Store
 keys.md
 
+# Node.js
+node_modules/
+package-lock.json
+
 # OpenClaw runtime state (создаётся автоматически в каждом workspace)
 **/.openclaw/
 
