feat: полный рефакторинг — TypeScript, cTrader, удаление Python/MT5
BREAKING CHANGE: все скрипты мигрированы на TypeScript

Задача 1: Инфраструктура
- OpenClaw обновлён до 2026.2.26
- Gateway systemd сервис создан и настроен
- Heartbeat настроен для всех 9 агентов
- Dashboard доступен через reverse proxy

Задача 2: TypeScript миграция
- tsconfig.json, eslint, prettier настроены
- Общие модули: types, indicators, risk, utils
- Крипто: config, state, bybit-client, killswitch, report, monitor
- Рыночный дайджест: market_digest.py → src/market/digest.ts
- Все workspace scripts обновлены

Задача 3: Forex — cTrader Open API
- Установлен ctrader-ts SDK
- Создан forex/client.ts (полный trading API)
- forex/config.ts (FTMO-совместимые лимиты)
- forex/monitor.ts (heartbeat, risk-check, trading)
- forex/trade.ts (CLI для торговых операций)

Задача 4: Удаление Python/MT5
- Удалены все 6 Python файлов (~950 строк)
- Удалены все 6 JavaScript файлов (~1270 строк)
- Удалены MT5 инфраструктурные файлы (install, service, EA)
- Зависимость от Python runtime полностью устранена

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,16 @@ keys.md
 node_modules/
 package-lock.json
 
+# TypeScript build output
+dist/
+
+# Runtime data
+data/
+
+# Python virtual environment
+.venv/
+__pycache__/
+
 # OpenClaw runtime state (создаётся автоматически в каждом workspace)
 **/.openclaw/
 
