--- a/package.json
+++ b/package.json
@@ -2,9 +2,20 @@
   "name": "openclaw-assistent",
   "version": "1.0.0",
   "description": "Команда AI-агентов на платформе [OpenClaw](https://openclaw.ai/) для автоматизации торговли, разработки и тестирования.",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "dev": "tsx watch src/index.ts",
+    "lint": "eslint src/",
+    "format": "prettier --write 'src/**/*.ts'",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "trade:crypto:monitor": "tsx src/trading/crypto/monitor.ts",
+    "trade:crypto:kill": "tsx src/trading/crypto/killswitch.ts",
+    "trade:crypto:report": "tsx src/trading/crypto/report.ts",
+    "trade:forex:monitor": "tsx src/trading/forex/monitor.ts",
+    "market:digest": "tsx src/market/digest.ts"
   },
   "repository": {
     "type": "git",
@@ -18,6 +29,18 @@
   },
   "homepage": "https://github.com/vorynkavitaliy/openclaw-assistent#readme",
   "dependencies": {
-    "bybit-api": "^4.6.0"
+    "bybit-api": "^4.6.0",
+    "ctrader-ts": "^0.1.1",
+    "rss-parser": "^3.13.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.3.2",
+    "@typescript-eslint/eslint-plugin": "^8.56.1",
+    "@typescript-eslint/parser": "^8.56.1",
+    "eslint": "^10.0.2",
+    "prettier": "^3.8.1",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   }
 }
