fix: @types/node + ESLint flat config + fix all TS/lint errors
- Добавлен @types/node для process, fs, path типизации
- tsconfig.json: добавлен types: ['node']
- Миграция ESLint .eslintrc.json → eslint.config.js (flat config v10)
- Добавлены @eslint/js, typescript-eslint, eslint-config-prettier
- Исправлены все 40+ TS/lint ошибок:
  - process.argv.find: добавлена типизация параметра
  - bybit-client: заменены any на PositionInfoParamsV5, OrderParamsV5, etc
  - import.meta.dirname → fileURLToPath(import.meta.url)
  - forex/client: fix await на не-Promise, unsafe enum comparison
  - killswitch: убраны бесполезные начальные присвоения
  - state: типизированы параметры map/filter
  - trade: fix getRequiredArg return type
- npx tsc --noEmit ✅
- npx eslint src/ ✅ (0 errors, 0 warnings)
- npx prettier --check ✅

--- a/package.json
+++ b/package.json
@@ -34,13 +34,16 @@
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/node": "^25.3.2",
     "@typescript-eslint/eslint-plugin": "^8.56.1",
     "@typescript-eslint/parser": "^8.56.1",
     "eslint": "^10.0.2",
+    "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.8.1",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.56.1",
     "vitest": "^4.0.18"
   }
 }
