refactor: DRY extraction, retry logic, graceful shutdown, stricter type safety
- Extract shared args.ts (CLI parsing DRY across 6 entry points)
- Add retryAsync utility with exponential backoff (telegram, digest, bybit)
- Extract BaseTradingConfig shared between forex/crypto configs
- Extract buildMarketAnalysis to shared/indicators.ts
- Consolidate fmt/fmtPrice into utils/telegram.ts
- Add runMain() graceful shutdown wrapper for all entry points
- Replace magic numbers with named constants across all modules
- Type PositionSide properly, fix side type from Bybit 'Buy'→'long'
- Add events.jsonl rotation (5MB cap) in crypto state
- Add LOG_LEVEL validation with fallback to 'info'
- Add credentials warnings for missing Bybit/cTrader keys
- Enable noUncheckedIndexedAccess + exactOptionalPropertyTypes
- Add typecheck, lint:fix, clean, trade:forex:trade npm scripts
- Change no-console ESLint rule from off to warn
- Fix nullish coalescing (|| → ??) in bybit balance parsing

--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
+    "typecheck": "tsc --noEmit",
     "dev": "tsx watch src/index.ts",
     "lint": "eslint src/",
+    "lint:fix": "eslint src/ --fix",
     "format": "prettier --write 'src/**/*.ts'",
+    "clean": "rm -rf dist",
     "test": "vitest",
     "test:run": "vitest run",
+    "trade:forex:monitor": "tsx src/trading/forex/monitor.ts",
+    "trade:forex:trade": "tsx src/trading/forex/trade.ts",
     "trade:crypto:monitor": "tsx src/trading/crypto/monitor.ts",
     "trade:crypto:kill": "tsx src/trading/crypto/killswitch.ts",
     "trade:crypto:report": "tsx src/trading/crypto/report.ts",
-    "trade:forex:monitor": "tsx src/trading/forex/monitor.ts",
     "market:digest": "tsx src/market/digest.ts"
   },
   "repository": {
