--- a/skills/taskboard/data/tasks.json
+++ b/skills/taskboard/data/tasks.json
@@ -1,1 +1,201 @@
-{ "tasks": [] }
+{
+  "tasks": [
+    {
+      "id": "TASK-001",
+      "title": "HEARTBEAT Forex (выходные) — 2026-02-28 20:11 UTC",
+      "description": "Позиции: 0. Risk-check: OK, alerts: 0, drawdownPct: 0%. Сигналы (dry-run): 0. Рынок: суббота, FX закрыт/ликвидность низкая — торговлю не выполнял.",
+      "type": "task",
+      "status": "todo",
+      "assignee": "forex-trader",
+      "reporter": "unknown",
+      "priority": "low",
+      "labels": [
+        "forex",
+        "heartbeat",
+        "monitoring"
+      ],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T20:11:53Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T20:11:53Z",
+      "updated_at": "2026-02-28T20:11:53Z"
+    },
+    {
+      "id": "TASK-002",
+      "title": "10-дневный автотрейдинг (крипто): цель +00/день при строгом риске",
+      "description": "Цель: запустить 10-дневный цикл автоторговли на крипте (капитал/бюджет бота: 0,000), без ручных напоминаний от владельца.\\n\\nKPI/режим: \\n- Каждый день пытаться заработать +00.\\n- Минимум 2 сделки в день (не меньше).\\n- Торговать активно (не ждать",
+      "type": "task",
+      "status": "todo",
+      "assignee": "crypto-trader",
+      "reporter": "unknown",
+      "priority": "high",
+      "labels": [
+        "crypto",
+        "autotrading",
+        "risk",
+        "reporting",
+        "10days"
+      ],
+      "parent": "",
+      "subtasks": [],
+      "comments": [
+        {
+          "author": "unknown",
+          "timestamp": "2026-02-28T20:13:11Z",
+          "text": "⚠️ Исправление: при создании задачи символ $ в CLI был интерпретирован shell, поэтому суммы в title/описании обнулились. Ниже — корректные числа (это и считать ТЗ):\\n- Цель: 10 дней, капитал 0,000.\\n- Daily target: +00/день.\\n- Min trades/day: 2.\\n- Stop-loss per trade: ≤ 00 (обязательно).\\n- Daily max loss: требуется уточнение (в сообщении владельца конфликт: 0 vs 00 vs '2 стопа'). До ответа владельца использовать: дневной лимит убытка = 00 ИЛИ 2 стопа (что раньше)."
+        },
+        {
+          "author": "unknown",
+          "timestamp": "2026-02-28T20:15:03Z",
+          "text": "✅ Уточнения от владельца (финальные):\\n- Дневная максимальная просадка: 0 (строго).\\n- Биржа: Bybit.\\n- Документация/правила: в корне скиллов у crypto-trader (обязательна к соблюдению).\\n- Все настройки (ключи/параметры) у агента уже есть.\\n\\n⚠️ Контроль риска (приведение правил к совместимому виду):\\n- Поскольку дневной лимит убытка = 0, он строже, чем лимит SL 00 и 'не более 2 стопов'.\\n- Требование: стоп-лоссы обязательны; размер SL на сделку подбирать так, чтобы суммарный риск/убыток за день не мог превысить 0 (например ≤5 на сделку при 2 сделках/день, либо иной расчёт с учётом уже реализованного P&L).\\n- Прекращать торговлю на день при достижении: -0 realised P&L ИЛИ 2 стопа (что наступит раньше).\\n\\nОтчётность: каждые 2 часа публиковать апдейт по статусу/сделкам/P&L/риску/плану в Task Board."
+        },
+        {
+          "author": "unknown",
+          "timestamp": "2026-02-28T20:16:09Z",
+          "text": "ℹ️ Уточнение от владельца: SL ≤ 00 — это именно MAX на сделку (верхний лимит), а не целевой размер SL. При дневном лимите -0 фактический риск/SL на сделку должен быть значительно меньше (≤ остатка дневного лимита), но никогда не превышать 00."
+        },
+        {
+          "author": "unknown",
+          "timestamp": "2026-02-28T20:16:57Z",
+          "text": "📣 Отчётность (обновлено по требованию владельца):\\n- Каждые 2 часа публиковать отчёт в Task Board.\\n- Дублировать отчёт в Telegram владельцу: в тексте отчёта добавлять короткий блок 'TELEGRAM SUMMARY' (5-10 строк). Orchestrator будет пересылать этот блок в Telegram."
+        },
+        {
+          "author": "unknown",
+          "timestamp": "2026-02-28T20:21:00Z",
+          "text": "Запрос владельца: подготовь и пришли (в Task Board + TELEGRAM SUMMARY) описание твоих правил/ограничений/скиллов.\\nНужно: \\n1) Какие стратегии/сигналы используешь (в общих чертах).\\n2) Список доступных скиллов/инструментов и что они делают (Bybit, автоторговля, риск-менеджмент, отчёты).\\n3) Где именно лежит 'документация в корне скиллов' (путь/файлы) и ключевые пункты.\\n4) Как ты реализуешь ограничения: дневной лимит -0, min 2 сделки/день, SL обязателен (SL≤00 но фактически ≤ остатка дневного лимита), стоп по дню при -0 или 2 стопах.\\n5) Формат 2-часового отчёта (поля) и какие метрики считаешь."
+        }
+      ],
+      "history": [
+        {
+          "timestamp": "2026-02-28T20:13:04Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T20:13:04Z",
+      "updated_at": "2026-02-28T20:21:00Z"
+    },
+    {
+      "id": "TASK-003",
+      "title": "HEARTBEAT Forex (выходные) — 2026-02-28 20:21 UTC",
+      "description": "Позиции: 0. Risk-check: OK, alerts: 0, drawdownPct: 0%. Сигналы (dry-run): 0. Рынок: суббота, FX закрыт/ликвидность низкая — сделок не открывал.",
+      "type": "task",
+      "status": "todo",
+      "assignee": "forex-trader",
+      "reporter": "unknown",
+      "priority": "low",
+      "labels": [
+        "forex",
+        "heartbeat",
+        "monitoring"
+      ],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T20:21:51Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T20:21:51Z",
+      "updated_at": "2026-02-28T20:21:51Z"
+    },
+    {
+      "id": "TASK-004",
+      "title": "Heartbeat 2026-02-28 20:22 UTC — статус/рынок",
+      "description": "Позиции: 0 (нет открытых). Баланс: 0001.90, P&L today: /usr/bin/bash.00, maxDD: 0%. HyroTrade лимиты: daily<4%, total<8% — ОК. Funding: BTC -0.000432% | ETH +0.002235% | SOL -0.001888%. Сигналы Smart Money (BTC/ETH/SOL): не найдено (monitor: signals=0, execution=0).",
+      "type": "task",
+      "status": "todo",
+      "assignee": "orchestrator",
+      "reporter": "unknown",
+      "priority": "low",
+      "labels": [
+        "crypto",
+        "heartbeat",
+        "report"
+      ],
+      "parent": "",
+      "subtasks": [],
+      "comments": [
+        {
+          "author": "unknown",
+          "timestamp": "2026-02-28T20:22:39Z",
+          "text": "⚠️ Исправление: в описании задачи символ $ был интерпретирован bash. Корректные значения: Баланс: $10001.90; P&L today: $0.00. Остальное без изменений."
+        }
+      ],
+      "history": [
+        {
+          "timestamp": "2026-02-28T20:22:26Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T20:22:26Z",
+      "updated_at": "2026-02-28T20:22:39Z"
+    },
+    {
+      "id": "TASK-005",
+      "title": "⚠️ Weekend risk: сообщения об ударах US–Israel по Ирану → потенциальный risk-off на открытии",
+      "description": "Время: 2026-02-28 20:22 UTC. Экономкалендарь ближайшие 4ч: событий нет (ForexFactory weekly XML). Новости: InvestingLive RSS — 'US and Israel Launch Broad Strike Wave in Iran' (28 Feb 07:26 GMT). Риск: рост волатильности/гэпы на открытии FX, safe-haven спрос (USD/JPY/CHF), чувствительность нефти/золота.",
+      "type": "task",
+      "status": "todo",
+      "assignee": "forex-trader",
+      "reporter": "unknown",
+      "priority": "critical",
+      "labels": [
+        "alert",
+        "macro",
+        "geopolitics"
+      ],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T20:23:14Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T20:23:14Z",
+      "updated_at": "2026-02-28T20:23:14Z"
+    },
+    {
+      "id": "TASK-006",
+      "title": "⚠️ Crypto: Fear & Greed=11 (Extreme Fear) + геополитический риск (Иран)",
+      "description": "Время: 2026-02-28 20:22 UTC. Fear & Greed Index: 11 (Extreme Fear, alternative.me). Bitcoin Dominance: ~56.25% (CoinGecko global). Новости: CoinDesk/InvestingLive — иранский риск, обсуждения влияния на рынки/нефть. Возможна повышенная волатильность на открытии/в выходные деривативов.",
+      "type": "task",
+      "status": "todo",
+      "assignee": "crypto-trader",
+      "reporter": "unknown",
+      "priority": "critical",
+      "labels": [
+        "alert",
+        "macro",
+        "geopolitics",
+        "crypto"
+      ],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T20:23:14Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T20:23:14Z",
+      "updated_at": "2026-02-28T20:23:14Z"
+    }
+  ]
+}
