--- a/skills/taskboard/data/tasks.json
+++ b/skills/taskboard/data/tasks.json
@@ -1,9 +1,9 @@
 {
   "tasks": [
     {
-      "id": "TASK-007",
-      "title": "10-дневный авто-трейдинг (крипто): +$100/день, лимит -$50/день",
-      "description": "Срок: 10 дней.\nЦель: каждый день пытаться заработать +$100.\nБиржа: Bybit (настройки у агента уже есть).\n\nСделки:\n- Минимум 2 сделки в день (не меньше).\n- Торговать активно (не ждать сетап сутками), но без избыточного риска.\n\nРиск и стопы:\n- Stop Loss обязателен на КАЖДУЮ сделку.\n- Stop Loss на сделку: не более $300 (hard cap).\n- Дневная просадка: не более $50 ИЛИ 2 словленных стопа (что наступит раньше).\n- При достижении -$50 realised P&L или 2 стопов → остановить торговлю до следующего дня.\n- Фактический риск/SL на сделку подбирать так, чтобы не нарушить дневной лимит -$50 (обычно значительно меньше $300).\n\nДокументация:\n- Строго следовать документации, заданной владельцем (в корне скиллов crypto-trader; ключевой файл: skills/crypto-trading/HYROTRADE_RULES.md).\n\nОтчётность:\n- Каждые 2 часа отчёт о выполненной работе.\n- Отчёт должен быть и в Task Board, и в Telegram владельцу (через orchestrator).\n\nАналитика:\n- 1 раз в день можно ставить задачу market-analyst для уточнения рыночных данных перед решениями.\n\nФормат 2-часового отчёта (минимум):\n- P&L за период и за день (realised/unrealised), число сделок сегодня, число стопов сегодня\n- Открытые позиции (пара/направление/вход/SL/TP/размер/текущее P&L)\n- Использованные сигналы/ТФ (4h/1h/15m/5m)\n- Статус лимитов: сколько осталось до -$50 и сколько стопов осталось\n- План до следующего отчёта / причины бездействия (если сделок не было)\n",
+      "id": "TASK-011",
+      "title": "10-дневный авто-трейдинг (крипто): +$100/день, лимит -$50/день или 2 стопа",
+      "description": "Срок: 10 дней.\nЦель: каждый день пытаться заработать +$100.\nБюджет/депозит бота: $10,000.\nБиржа: Bybit (настройки у агента уже есть).\n\nСделки:\n- Минимум 2 сделки в день (не меньше).\n- Торговать активно (не ждать сетап сутками), но без избыточного риска.\n\nРиск и стопы:\n- Stop Loss обязателен на КАЖДУЮ сделку.\n- Stop Loss на сделку: не более $300 (hard cap).\n- Дневная просадка: не более $50 ИЛИ 2 словленных стопа (что наступит раньше).\n- При достижении -$50 realised P&L или 2 стопов → остановить торговлю до следующего дня.\n- Фактический риск/SL на сделку подбирать так, чтобы не нарушить дневной лимит -$50 (обычно значительно меньше $300).\n\nДокументация:\n- Строго следовать документации владельца (в корне скиллов crypto-trader; ключевой файл: skills/crypto-trading/HYROTRADE_RULES.md).\n\nАвтоторговля:\n- FULL-AUTO, без напоминаний от владельца.\n\nОтчётность:\n- Каждые 2 часа отчёт о выполненной работе.\n- Отчёт должен быть и в Task Board, и в Telegram владельцу (через orchestrator).\n\nАналитика:\n- 1 раз в день агент может ставить задачу market-analyst для уточнения рыночных данных перед решениями.\n\nФормат 2-часового отчёта (минимум):\n- P&L за период и за день (realised/unrealised), число сделок сегодня, число стопов сегодня\n- Открытые позиции (пара/направление/вход/SL/TP/размер/текущее P&L)\n- Использованные сигналы/ТФ (4h/1h/15m/5m)\n- Статус лимитов: сколько осталось до -$50 и сколько стопов осталось\n- План до следующего отчёта / причины бездействия (если сделок не было)\n",
       "type": "task",
       "status": "in_progress",
       "assignee": "crypto-trader",
@@ -22,33 +22,33 @@
       "comments": [
         {
           "author": "unknown",
-          "timestamp": "2026-02-28T20:44:49Z",
-          "text": "Взял в работу (in_progress). Текущий heartbeat 20:44 UTC: позиций нет, DD=0%, сигналов Smart Money по BTC/ETH/SOL нет → сделок не открывал. Следующий чек по расписанию."
+          "timestamp": "2026-02-28T21:18:46Z",
+          "text": "Взял в работу (in_progress). Heartbeat 21:18 UTC: позиций нет, DD=0%, сигналов Smart Money по BTC/ETH/SOL нет → сделок не открывал."
         }
       ],
       "history": [
         {
-          "timestamp": "2026-02-28T20:41:03Z",
+          "timestamp": "2026-02-28T21:08:59Z",
           "agent": "unknown",
           "action": "created"
         },
         {
-          "timestamp": "2026-02-28T20:44:08Z",
+          "timestamp": "2026-02-28T21:18:12Z",
           "agent": "unknown",
           "action": "status_changed",
           "from": "todo",
           "to": "in_progress"
         }
       ],
-      "created_at": "2026-02-28T20:41:03Z",
-      "updated_at": "2026-02-28T20:44:49Z"
+      "created_at": "2026-02-28T21:08:59Z",
+      "updated_at": "2026-02-28T21:18:46Z"
     },
     {
-      "id": "TASK-008",
-      "title": "HEARTBEAT Forex (выходные) — 2026-02-28 20:43 UTC",
-      "description": "Task Board todo: 0 (нечего брать в работу). Позиции: 0. Risk-check: OK, alerts: 0, drawdownPct: 0%. Сигналы (dry-run): 0. Рынок: суббота, FX закрыт/ликвидность низкая — сделок не открывал.",
+      "id": "TASK-012",
+      "title": "HEARTBEAT Forex (выходные) — 2026-02-28 21:17 UTC",
+      "description": "Task Board todo: 0. Позиции: 0. Risk-check: OK, alerts: 0, drawdownPct: 0%. Сигналы (dry-run): 0. Рынок: суббота, FX закрыт/ликвидность низкая — сделок не открывал.",
       "type": "task",
-      "status": "todo",
+      "status": "done",
       "assignee": "forex-trader",
       "reporter": "unknown",
       "priority": "low",
@@ -59,21 +59,41 @@
       ],
       "parent": "",
       "subtasks": [],
-      "comments": [],
-      "history": [
+      "comments": [
         {
-          "timestamp": "2026-02-28T20:43:50Z",
-          "agent": "unknown",
-          "action": "created"
+          "author": "unknown",
+          "timestamp": "2026-02-28T21:27:32Z",
+          "text": "Взято в работу: heartbeat обработан. Закрываю задачу."
         }
       ],
-      "created_at": "2026-02-28T20:43:50Z",
-      "updated_at": "2026-02-28T20:43:50Z"
+      "history": [
+        {
+          "timestamp": "2026-02-28T21:17:40Z",
+          "agent": "unknown",
+          "action": "created"
+        },
+        {
+          "timestamp": "2026-02-28T21:27:32Z",
+          "agent": "unknown",
+          "action": "status_changed",
+          "from": "todo",
+          "to": "in_progress"
+        },
+        {
+          "timestamp": "2026-02-28T21:27:37Z",
+          "agent": "unknown",
+          "action": "status_changed",
+          "from": "in_progress",
+          "to": "done"
+        }
+      ],
+      "created_at": "2026-02-28T21:17:40Z",
+      "updated_at": "2026-02-28T21:27:37Z"
     },
     {
-      "id": "TASK-009",
-      "title": "Heartbeat 2026-02-28 20:44 UTC — мониторинг",
-      "description": "Позиции: 0. Баланс: 0001.90. Unrealized: /usr/bin/bash. Daily P&L: /usr/bin/bash, maxDD: 0%. HyroTrade лимиты (daily<4%, total<8%): OK. Funding: BTC -0.000273% | ETH +0.001607% | SOL -0.003873%. Smart Money (BTC/ETH/SOL): сигналов нет (signals=0), execution=0.",
+      "id": "TASK-013",
+      "title": "Heartbeat 2026-02-28 21:18 UTC — мониторинг",
+      "description": "Позиции: 0. Баланс: 0001.90. Unrealized: /usr/bin/bash. Daily P&L: /usr/bin/bash, maxDD: 0%. HyroTrade лимиты (daily<4%, total<8%): OK. Funding: BTC +0.000462% | ETH +0.001680% | SOL -0.006664%. Smart Money (BTC/ETH/SOL): сигналов нет (signals=0), execution=0.",
       "type": "task",
       "status": "todo",
       "assignee": "orchestrator",
@@ -89,19 +109,201 @@
       "comments": [
         {
           "author": "unknown",
-          "timestamp": "2026-02-28T20:44:43Z",
+          "timestamp": "2026-02-28T21:18:42Z",
           "text": "⚠️ Исправление: символ $ был интерпретирован bash. Корректно: Баланс $10001.90; Unrealized $0; Daily P&L $0."
         }
       ],
       "history": [
         {
-          "timestamp": "2026-02-28T20:44:36Z",
+          "timestamp": "2026-02-28T21:18:35Z",
           "agent": "unknown",
           "action": "created"
         }
       ],
-      "created_at": "2026-02-28T20:44:36Z",
-      "updated_at": "2026-02-28T20:44:43Z"
+      "created_at": "2026-02-28T21:18:35Z",
+      "updated_at": "2026-02-28T21:18:42Z"
+    },
+    {
+      "id": "TASK-014",
+      "title": "HEARTBEAT Forex (выходные) — 2026-02-28 21:27 UTC",
+      "description": "Task Board todo: 1 (TASK-012) → взято/закрыто. Позиции: 0. Risk-check: OK, alerts: 0, drawdownPct: 0%. Сигналы (dry-run): 0. Рынок: суббота, FX закрыт/ликвидность низкая — сделок не открывал.",
+      "type": "task",
+      "status": "done",
+      "assignee": "forex-trader",
+      "reporter": "unknown",
+      "priority": "low",
+      "labels": [
+        "forex",
+        "heartbeat",
+        "monitoring"
+      ],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T21:27:53Z",
+          "agent": "unknown",
+          "action": "created"
+        },
+        {
+          "timestamp": "2026-02-28T21:28:05Z",
+          "agent": "unknown",
+          "action": "status_changed",
+          "from": "todo",
+          "to": "done"
+        }
+      ],
+      "created_at": "2026-02-28T21:27:53Z",
+      "updated_at": "2026-02-28T21:28:05Z"
+    },
+    {
+      "id": "TASK-015",
+      "title": "Heartbeat 2026-02-28 21:28 UTC — мониторинг",
+      "description": "Позиции: 0. Баланс: 0001.90. Unrealized: /usr/bin/bash. Daily P&L: /usr/bin/bash, maxDD: 0%. HyroTrade лимиты (daily<4%, total<8%): OK. Funding: BTC +0.000489% | ETH +0.001474% | SOL -0.006923%. Smart Money (BTC/ETH/SOL): сигналов нет (signals=0), execution=0.",
+      "type": "task",
+      "status": "todo",
+      "assignee": "orchestrator",
+      "reporter": "unknown",
+      "priority": "low",
+      "labels": [
+        "crypto",
+        "heartbeat",
+        "report"
+      ],
+      "parent": "",
+      "subtasks": [],
+      "comments": [
+        {
+          "author": "unknown",
+          "timestamp": "2026-02-28T21:28:55Z",
+          "text": "⚠️ Исправление: символ $ был интерпретирован bash. Корректно: Баланс $10001.90; Unrealized $0; Daily P&L $0."
+        }
+      ],
+      "history": [
+        {
+          "timestamp": "2026-02-28T21:28:47Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T21:28:47Z",
+      "updated_at": "2026-02-28T21:28:55Z"
+    },
+    {
+      "id": "TASK-016",
+      "title": "TEST: auto-detect agent",
+      "description": "",
+      "type": "task",
+      "status": "todo",
+      "assignee": "",
+      "reporter": "crypto-trader",
+      "priority": "low",
+      "labels": [],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T21:33:41Z",
+          "agent": "crypto-trader",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T21:33:41Z",
+      "updated_at": "2026-02-28T21:33:41Z"
+    },
+    {
+      "id": "TASK-017",
+      "title": "TEST: orchestrator auto",
+      "description": "",
+      "type": "task",
+      "status": "todo",
+      "assignee": "",
+      "reporter": "orchestrator",
+      "priority": "low",
+      "labels": [],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T21:33:52Z",
+          "agent": "orchestrator",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T21:33:52Z",
+      "updated_at": "2026-02-28T21:33:52Z"
+    },
+    {
+      "id": "TASK-018",
+      "title": "TEST: parent CWD",
+      "description": "",
+      "type": "task",
+      "status": "todo",
+      "assignee": "",
+      "reporter": "unknown",
+      "priority": "low",
+      "labels": [],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T21:34:01Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T21:34:01Z",
+      "updated_at": "2026-02-28T21:34:01Z"
+    },
+    {
+      "id": "TASK-019",
+      "title": "TEST: cd to project root",
+      "description": "",
+      "type": "task",
+      "status": "todo",
+      "assignee": "",
+      "reporter": "unknown",
+      "priority": "low",
+      "labels": [],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T21:34:28Z",
+          "agent": "unknown",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T21:34:28Z",
+      "updated_at": "2026-02-28T21:34:28Z"
+    },
+    {
+      "id": "TASK-020",
+      "title": "TEST: ancestor detect",
+      "description": "",
+      "type": "task",
+      "status": "todo",
+      "assignee": "",
+      "reporter": "market-analyst",
+      "priority": "low",
+      "labels": [],
+      "parent": "",
+      "subtasks": [],
+      "comments": [],
+      "history": [
+        {
+          "timestamp": "2026-02-28T21:35:57Z",
+          "agent": "market-analyst",
+          "action": "created"
+        }
+      ],
+      "created_at": "2026-02-28T21:35:57Z",
+      "updated_at": "2026-02-28T21:35:57Z"
     }
   ]
 }
