feat(taskboard): telegram notifications + agent emoji system
- Add send_telegram() with async curl to Telegram Bot API
- Add notify_action() for all task actions: create, update, comment, delete
- Visual emoji system per agent (🎯₿💱📊👨‍💻⚙️🎨🧪)
- Status emojis (📋🔄👀🧪✅🚫❌) and priority emojis (🔴🟠🟡🟢)
- telegram.conf for credentials (gitignored)
- Fix newline rendering with printf + --data-urlencode
- Update SKILL.md with Telegram notification docs

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@ __pycache__/
 # OpenClaw auto-generated templates (можно добавить, если полезны)
 # USER.md
 # HEARTBEAT.md
+skills/taskboard/data/telegram.conf
