--- a/skills/taskboard/data/tasks.json
+++ b/skills/taskboard/data/tasks.json
@@ -1,13 +1,13 @@
 {
   "tasks": [
     {
-      "id": "TASK-011",
+      "id": "TASK-002",
       "title": "10-дневный авто-трейдинг (крипто): +$100/день, лимит -$50/день или 2 стопа",
       "description": "Срок: 10 дней.\nЦель: каждый день пытаться заработать +$100.\nБюджет/депозит бота: $10,000.\nБиржа: Bybit (настройки у агента уже есть).\n\nСделки:\n- Минимум 2 сделки в день (не меньше).\n- Торговать активно (не ждать сетап сутками), но без избыточного риска.\n\nРиск и стопы:\n- Stop Loss обязателен на КАЖДУЮ сделку.\n- Stop Loss на сделку: не более $300 (hard cap).\n- Дневная просадка: не более $50 ИЛИ 2 словленных стопа (что наступит раньше).\n- При достижении -$50 realised P&L или 2 стопов → остановить торговлю до следующего дня.\n- Фактический риск/SL на сделку подбирать так, чтобы не нарушить дневной лимит -$50 (обычно значительно меньше $300).\n\nДокументация:\n- Строго следовать документации владельца (в корне скиллов crypto-trader; ключевой файл: skills/crypto-trading/HYROTRADE_RULES.md).\n\nАвтоторговля:\n- FULL-AUTO, без напоминаний от владельца.\n\nОтчётность:\n- Каждые 2 часа отчёт о выполненной работе.\n- Отчёт должен быть и в Task Board, и в Telegram владельцу (через orchestrator).\n\nАналитика:\n- 1 раз в день агент может ставить задачу market-analyst для уточнения рыночных данных перед решениями.\n\nФормат 2-часового отчёта (минимум):\n- P&L за период и за день (realised/unrealised), число сделок сегодня, число стопов сегодня\n- Открытые позиции (пара/направление/вход/SL/TP/размер/текущее P&L)\n- Использованные сигналы/ТФ (4h/1h/15m/5m)\n- Статус лимитов: сколько осталось до -$50 и сколько стопов осталось\n- План до следующего отчёта / причины бездействия (если сделок не было)\n",
       "type": "task",
       "status": "in_progress",
       "assignee": "crypto-trader",
-      "reporter": "unknown",
+      "reporter": "orchestrator",
       "priority": "critical",
       "labels": [
         "crypto",
@@ -21,116 +21,36 @@
       "subtasks": [],
       "comments": [
         {
-          "author": "unknown",
-          "timestamp": "2026-02-28T21:18:46Z",
-          "text": "Взял в работу (in_progress). Heartbeat 21:18 UTC: позиций нет, DD=0%, сигналов Smart Money по BTC/ETH/SOL нет → сделок не открывал."
+          "author": "crypto-trader",
+          "timestamp": "2026-02-28T21:49:15Z",
+          "text": "Взял в работу (in_progress). Heartbeat 21:49 UTC: позиций нет, DD=0%, сигналы Smart Money по BTC/ETH/SOL не подтверждены → сделок не открывал."
         }
       ],
       "history": [
         {
-          "timestamp": "2026-02-28T21:08:59Z",
-          "agent": "unknown",
+          "timestamp": "2026-02-28T21:42:57Z",
+          "agent": "orchestrator",
           "action": "created"
         },
         {
-          "timestamp": "2026-02-28T21:18:12Z",
-          "agent": "unknown",
+          "timestamp": "2026-02-28T21:48:41Z",
+          "agent": "crypto-trader",
           "action": "status_changed",
           "from": "todo",
           "to": "in_progress"
         }
       ],
-      "created_at": "2026-02-28T21:08:59Z",
-      "updated_at": "2026-02-28T21:18:46Z"
+      "created_at": "2026-02-28T21:42:57Z",
+      "updated_at": "2026-02-28T21:49:15Z"
     },
     {
-      "id": "TASK-012",
-      "title": "HEARTBEAT Forex (выходные) — 2026-02-28 21:17 UTC",
+      "id": "TASK-003",
+      "title": "HEARTBEAT Forex (выходные) — 2026-02-28 21:48 UTC",
       "description": "Task Board todo: 0. Позиции: 0. Risk-check: OK, alerts: 0, drawdownPct: 0%. Сигналы (dry-run): 0. Рынок: суббота, FX закрыт/ликвидность низкая — сделок не открывал.",
       "type": "task",
       "status": "done",
       "assignee": "forex-trader",
-      "reporter": "unknown",
-      "priority": "low",
-      "labels": [
-        "forex",
-        "heartbeat",
-        "monitoring"
-      ],
-      "parent": "",
-      "subtasks": [],
-      "comments": [
-        {
-          "author": "unknown",
-          "timestamp": "2026-02-28T21:27:32Z",
-          "text": "Взято в работу: heartbeat обработан. Закрываю задачу."
-        }
-      ],
-      "history": [
-        {
-          "timestamp": "2026-02-28T21:17:40Z",
-          "agent": "unknown",
-          "action": "created"
-        },
-        {
-          "timestamp": "2026-02-28T21:27:32Z",
-          "agent": "unknown",
-          "action": "status_changed",
-          "from": "todo",
-          "to": "in_progress"
-        },
-        {
-          "timestamp": "2026-02-28T21:27:37Z",
-          "agent": "unknown",
-          "action": "status_changed",
-          "from": "in_progress",
-          "to": "done"
-        }
-      ],
-      "created_at": "2026-02-28T21:17:40Z",
-      "updated_at": "2026-02-28T21:27:37Z"
-    },
-    {
-      "id": "TASK-013",
-      "title": "Heartbeat 2026-02-28 21:18 UTC — мониторинг",
-      "description": "Позиции: 0. Баланс: 0001.90. Unrealized: /usr/bin/bash. Daily P&L: /usr/bin/bash, maxDD: 0%. HyroTrade лимиты (daily<4%, total<8%): OK. Funding: BTC +0.000462% | ETH +0.001680% | SOL -0.006664%. Smart Money (BTC/ETH/SOL): сигналов нет (signals=0), execution=0.",
-      "type": "task",
-      "status": "todo",
-      "assignee": "orchestrator",
-      "reporter": "unknown",
-      "priority": "low",
-      "labels": [
-        "crypto",
-        "heartbeat",
-        "report"
-      ],
-      "parent": "",
-      "subtasks": [],
-      "comments": [
-        {
-          "author": "unknown",
-          "timestamp": "2026-02-28T21:18:42Z",
-          "text": "⚠️ Исправление: символ $ был интерпретирован bash. Корректно: Баланс $10001.90; Unrealized $0; Daily P&L $0."
-        }
-      ],
-      "history": [
-        {
-          "timestamp": "2026-02-28T21:18:35Z",
-          "agent": "unknown",
-          "action": "created"
-        }
-      ],
-      "created_at": "2026-02-28T21:18:35Z",
-      "updated_at": "2026-02-28T21:18:42Z"
-    },
-    {
-      "id": "TASK-014",
-      "title": "HEARTBEAT Forex (выходные) — 2026-02-28 21:27 UTC",
-      "description": "Task Board todo: 1 (TASK-012) → взято/закрыто. Позиции: 0. Risk-check: OK, alerts: 0, drawdownPct: 0%. Сигналы (dry-run): 0. Рынок: суббота, FX закрыт/ликвидность низкая — сделок не открывал.",
-      "type": "task",
-      "status": "done",
-      "assignee": "forex-trader",
-      "reporter": "unknown",
+      "reporter": "forex-trader",
       "priority": "low",
       "labels": [
         "forex",
@@ -142,168 +62,47 @@
       "comments": [],
       "history": [
         {
-          "timestamp": "2026-02-28T21:27:53Z",
-          "agent": "unknown",
+          "timestamp": "2026-02-28T21:48:15Z",
+          "agent": "forex-trader",
           "action": "created"
         },
         {
-          "timestamp": "2026-02-28T21:28:05Z",
-          "agent": "unknown",
+          "timestamp": "2026-02-28T21:48:22Z",
+          "agent": "forex-trader",
           "action": "status_changed",
           "from": "todo",
           "to": "done"
         }
       ],
-      "created_at": "2026-02-28T21:27:53Z",
-      "updated_at": "2026-02-28T21:28:05Z"
+      "created_at": "2026-02-28T21:48:15Z",
+      "updated_at": "2026-02-28T21:48:22Z"
     },
     {
-      "id": "TASK-015",
-      "title": "Heartbeat 2026-02-28 21:28 UTC — мониторинг",
-      "description": "Позиции: 0. Баланс: 0001.90. Unrealized: /usr/bin/bash. Daily P&L: /usr/bin/bash, maxDD: 0%. HyroTrade лимиты (daily<4%, total<8%): OK. Funding: BTC +0.000489% | ETH +0.001474% | SOL -0.006923%. Smart Money (BTC/ETH/SOL): сигналов нет (signals=0), execution=0.",
+      "id": "TASK-004",
+      "title": "Heartbeat 2026-02-28 21:49 UTC — мониторинг",
+      "description": "Позиции: 0. Баланс: $10001.90. Unrealized: $0. Daily P&L: $0, maxDD: 0%. HyroTrade лимиты (daily<4%, total<8%): OK. Funding: BTC +0.000613% | ETH +0.001398% | SOL -0.008201%. Smart Money (BTC/ETH/SOL): сигналов нет (signals=0), execution=0.",
       "type": "task",
       "status": "todo",
       "assignee": "orchestrator",
-      "reporter": "unknown",
-      "priority": "low",
-      "labels": [
-        "crypto",
-        "heartbeat",
-        "report"
-      ],
-      "parent": "",
-      "subtasks": [],
-      "comments": [
-        {
-          "author": "unknown",
-          "timestamp": "2026-02-28T21:28:55Z",
-          "text": "⚠️ Исправление: символ $ был интерпретирован bash. Корректно: Баланс $10001.90; Unrealized $0; Daily P&L $0."
-        }
-      ],
-      "history": [
-        {
-          "timestamp": "2026-02-28T21:28:47Z",
-          "agent": "unknown",
-          "action": "created"
-        }
-      ],
-      "created_at": "2026-02-28T21:28:47Z",
-      "updated_at": "2026-02-28T21:28:55Z"
-    },
-    {
-      "id": "TASK-016",
-      "title": "TEST: auto-detect agent",
-      "description": "",
-      "type": "task",
-      "status": "todo",
-      "assignee": "",
       "reporter": "crypto-trader",
       "priority": "low",
-      "labels": [],
+      "labels": [
+        "crypto",
+        "heartbeat",
+        "report"
+      ],
       "parent": "",
       "subtasks": [],
       "comments": [],
       "history": [
         {
-          "timestamp": "2026-02-28T21:33:41Z",
+          "timestamp": "2026-02-28T21:49:08Z",
           "agent": "crypto-trader",
           "action": "created"
         }
       ],
-      "created_at": "2026-02-28T21:33:41Z",
-      "updated_at": "2026-02-28T21:33:41Z"
-    },
-    {
-      "id": "TASK-017",
-      "title": "TEST: orchestrator auto",
-      "description": "",
-      "type": "task",
-      "status": "todo",
-      "assignee": "",
-      "reporter": "orchestrator",
-      "priority": "low",
-      "labels": [],
-      "parent": "",
-      "subtasks": [],
-      "comments": [],
-      "history": [
-        {
-          "timestamp": "2026-02-28T21:33:52Z",
-          "agent": "orchestrator",
-          "action": "created"
-        }
-      ],
-      "created_at": "2026-02-28T21:33:52Z",
-      "updated_at": "2026-02-28T21:33:52Z"
-    },
-    {
-      "id": "TASK-018",
-      "title": "TEST: parent CWD",
-      "description": "",
-      "type": "task",
-      "status": "todo",
-      "assignee": "",
-      "reporter": "unknown",
-      "priority": "low",
-      "labels": [],
-      "parent": "",
-      "subtasks": [],
-      "comments": [],
-      "history": [
-        {
-          "timestamp": "2026-02-28T21:34:01Z",
-          "agent": "unknown",
-          "action": "created"
-        }
-      ],
-      "created_at": "2026-02-28T21:34:01Z",
-      "updated_at": "2026-02-28T21:34:01Z"
-    },
-    {
-      "id": "TASK-019",
-      "title": "TEST: cd to project root",
-      "description": "",
-      "type": "task",
-      "status": "todo",
-      "assignee": "",
-      "reporter": "unknown",
-      "priority": "low",
-      "labels": [],
-      "parent": "",
-      "subtasks": [],
-      "comments": [],
-      "history": [
-        {
-          "timestamp": "2026-02-28T21:34:28Z",
-          "agent": "unknown",
-          "action": "created"
-        }
-      ],
-      "created_at": "2026-02-28T21:34:28Z",
-      "updated_at": "2026-02-28T21:34:28Z"
-    },
-    {
-      "id": "TASK-020",
-      "title": "TEST: ancestor detect",
-      "description": "",
-      "type": "task",
-      "status": "todo",
-      "assignee": "",
-      "reporter": "market-analyst",
-      "priority": "low",
-      "labels": [],
-      "parent": "",
-      "subtasks": [],
-      "comments": [],
-      "history": [
-        {
-          "timestamp": "2026-02-28T21:35:57Z",
-          "agent": "market-analyst",
-          "action": "created"
-        }
-      ],
-      "created_at": "2026-02-28T21:35:57Z",
-      "updated_at": "2026-02-28T21:35:57Z"
+      "created_at": "2026-02-28T21:49:08Z",
+      "updated_at": "2026-02-28T21:49:08Z"
     }
   ]
 }
